@@ -56,7 +56,7 @@ Main available cmake flags:
 * To specify the install path: '-DCMAKE_INSTALL_PREFIX=/path'
 * To build the shared libraries: '-DBUILD_SHARED_LIBS:bool=on' (default: 'ON')
 * To build the CODEC executables: '-DBUILD_CODEC:bool=on' (default: 'ON')
-* To build the MJ2 executables: '-DBUILD_MJ2:bool=on' (default: 'ON')
+* To build the MJ2 executables: '-DBUILD_MJ2:bool=on' (default: 'OFF')
 * To build the JPWL executables and JPWL library: '-DBUILD_JPWL:bool=on' (default: 'OFF')
 * To build the JP3D executables and JP3D library: '-DBUILD_JP3D:bool=on' (default: 'OFF')
 * [WIN32 ONLY] To build the INDEXER_JPIP executable: '-DBUILD_INDEXER_JPIP:bool=on' (default: 'OFF')
